Salesforce Fundamentals/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - DOB__c)/365) + (MOD((TODAY() - (DOB__c)),365)/30)/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_name__c</fullName>
        <label>Spouse name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>FirstName__c</columns>
        <columns>Age__c</columns>
        <columns>Class__c</columns>
        <columns>DOB__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Sex__c</columns>
        <columns>Married__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Male_Student</fullName>
        <columns>Class__c</columns>
        <columns>Age__c</columns>
        <columns>DOB__c</columns>
        <columns>Email__c</columns>
        <columns>FirstName__c</columns>
        <columns>Sex__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Sex__c</field>
            <operation>equals</operation>
            <value>M</value>
        </filters>
        <label>Male Student</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>